# hx_chat

./: README.md  create_table.sql  dune-project  flake.nix  hx.opam  hx_chat.opam
lib/: basic__data.ml  basic__data.mli  basic__main.ml  basic__repo.ml  basic__repo.mli  common.ml  common.mli  data.ml  data.mli  dune  htmx__main.ml  main.ml  repo.ml  repo.mli  template.ml  template.mli
test/: dune
